some initial styling; installed gulp; fixes for image uploads and cropping in vagrant; hiding vagrant logs

--- a/wp-content/themes/commbible/style.scss
+++ b/wp-content/themes/commbible/style.scss
@@ -9,3 +9,205 @@
 	License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 	Text Domain:  commbible
 */
+
+/* variables */
+$brand_hue: 215;
+$brand: hsl($brand_hue, 42%, 50%);
+
+/* fonts */
+$header_font: 'Open+Sans';
+$header_size: '700';
+$para_font: 'Roboto';
+$para_size: '400,500';
+
+@import url('https://fonts.googleapis.com/css?family=#{$header_font}:#{$header_size}|#{$para_font}:#{$para_size}');
+
+$header_font: 'Open Sans';
+
+/* legibility */
+body, button, input, textarea {
+	background-color: white;
+    color: #43454b;
+    line-height: 1.618;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 400;
+    font-size: 18px;
+    letter-spacing: -0.001em;
+    word-spacing: 0.03em;
+}
+
+$para_color: hsla($brand_hue, 10%, 10%, 0.8);
+
+p {
+    margin: 0 0 0.8em;
+    color: $para_color;
+}
+
+body, p {
+	font-family: $para_font;
+	font-weight: 400;
+	strong {
+		font-weight: 500;
+	}
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+	line-height: 1.4;
+	font-family: $header_font;
+	font-weight: 700;
+}
+
+// header
+
+.custom-header {
+    height: 500px;
+    height: 61.8vh !important;
+    max-height: 61.8%;
+}
+
+#wp-custom-header {
+	height: 100%;
+	background-color: #00ffff;
+	filter: saturate(1000%) brightness(110%);
+	img {
+		position: relative;
+	}
+}
+
+.site-branding {
+	box-shadow: inset rgba(0,0,150,0.5) 1em 2em 3em,
+		inset rgba(0,0,150,0.5) -1em 0em 3em,
+		inset rgba(255,255,255,0.5) 0em -30em 6em;
+	position: absolute;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+	display:flex !important;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+
+	.site-title a,
+	.site-description {
+		color:#222 !important;
+		text-shadow: rgba(255,255,255,0.6) 1px 1px 0;
+		font-size: 32px;
+		padding: 0;
+	}
+	.site-title {
+		margin-top: 120px;
+		margin-bottom: 40px;
+	}
+	.site-description {
+		font-size: 24px;
+		font-weight: bold;
+		color: darken($brand, 20%) !important;
+	}
+}
+
+// nav bar
+.navigation-top {
+	border:none;
+	background: $brand !important;
+	#top-menu {
+		border:none;
+		background: transparent;
+		display:flex;
+		flex-flow: row wrap;
+		justify-content: center;
+		padding:0;
+	}
+	li {
+		border:none;
+	}
+	a { 
+		color:white;
+		font-weight: bold;
+		letter-spacing: 0.06em;
+		word-spacing: 0.2em;
+		font-size: 1em;
+		text-transform: uppercase;
+		padding: 16px 34px;
+	    transition: color 0.4s, background-color 0.4s;
+		&:hover {
+		    color: #FFF;
+			background-color: rgba(0,0,0,0.1);
+		}
+	}
+	// disable wrap
+	.wrap {
+		padding:0;
+	}
+}
+
+.main-navigation a {
+}
+
+// page content
+#content {
+	.twentyseventeen-panel {
+		&:nth-child(even) {
+			// reverse
+			background-color: hsl($brand_hue, 40%, 30%);
+			h2, 
+			p,
+			.entry-title,
+			.entry-title a {
+				color: hsl($brand_hue, 30%, 84%) !important;
+			}
+		}
+		.panel-content {
+			display: flex;
+			flex-flow: column nowrap;
+			justify-content: center;
+			align-content: center;
+			.entry-header {
+			    margin-bottom: 0;
+			}
+			.wrap {
+			    padding-bottom: 8em;
+			    padding-top: 4em;
+			}
+			.entry-title,
+			.entry-title a {
+			    color: hsl($brand_hue, 30%, 40%);
+			}
+		}
+		&:not(:first-child) .panel-content {
+			min-height: 70vh;
+		}
+	}
+	.entry-title {
+		font-size: 28px;
+		font-size: 1.618rem;
+		text-align: center;
+		margin-top: 0.8em;
+		margin-bottom: 1em;
+	}
+}
+
+// selection 
+$select_bg: $brand;
+
+::-moz-selection {
+    color: white;
+    background: $select_bg;
+}
+
+::selection {
+    color: white; 
+    background: $select_bg;
+}
+
+// media 
+@media screen and (min-width: 48em) {
+	.navigation-top {
+		a {
+			font-size: 1.16em;
+			text-transform: uppercase;
+		}
+	}
+}
